# sdl-engine

./: .gitignore  CMakeLists.txt  readme.md
src/: Sheeva.Engine.sln
src/Sheeva/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  Header.h  InputHandler.cpp  InputHandler.h  LoaderParams.h  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SDLGameObject.h  Sheeva.vcxproj  Sheeva.vcxproj.filters  Singleton.h  TextureManager.cpp  TextureManager.h  Vector2D.h  main.cpp
